# King-Under-Attack-Detector

./: .travis.yml  CMakeLists.txt  ChessMath.h  Jenkinsfile  Makefile  README.md  a.out  a.out_debug  build.gradle  check  chess_game_dynamic  chess_game_static  ckb.cpp  cpp_make.tar  main.cpp  test.cpp  СhessMath.cpp
.github/workflows/: main.yml
googletest-release-1.8.0/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-release-1.8.0/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-release-1.8.0/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/main/java/com/lakton/: ChessMath.java  Main.java  Piece.java
src/test/java/: TestMain.java
tests/: ChessMath.cpp  ChessMath.h  ChessMathTest  ChessMathTest.cpp
